--- a/ArchitectureComponentsDemo/app/src/main/res/values/strings.xml
+++ b/ArchitectureComponentsDemo/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ArchitectureComponentsDemo</string>
+    <string name="account_title">%1$s %2$s</string>
 </resources>
