update ArchitectureComponentsDemo and add LeakCanary and ACRA

--- a/ArchitectureComponentsDemo/app/src/main/res/values/strings.xml
+++ b/ArchitectureComponentsDemo/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ArchitectureComponentsDemo</string>
     <string name="account_title">%1$s %2$s</string>
+    <string name="crash_toast_text">crash</string>
 </resources>
